make some css visibility correction

--- a/style.scss
+++ b/style.scss
@@ -24,81 +24,86 @@ div.characters {
   padding: 20px;
 }
 
-/* Character Card */
 div.char {
   position: relative;
   border: 2px solid rgb(180, 211, 180);
+  border-radius: 5%;
+
+  h2 {
+    display: flex;
+    transform: translateY(-55%);
+    color: rgb(180, 211, 180);
+    margin: -16px;
+    justify-content: center;
+    text-shadow: #000 1px 0 10px;
+  }
+
+  img {
+    width: 100%;
+    max-width: 100%;
+    border-radius: 5%;
+  }
 }
 
-/* Character Name */
-div.char h2 {
-  display: flex;
-  transform: translateY(-55%);
+h1 {
+  text-align: center;
   color: rgb(180, 211, 180);
-  background-color: rgba(0, 0, 0, 0.5);
-  margin: -16px;
-  justify-content: center;
+  text-shadow: #000 1px 0 10px;
 }
 
-/* Character Image */
-div.char img {
-  width: 100%;
-  max-width: 100%;
-  /* Added for responsiveness */
-  height: auto;
-  /* Added for responsiveness */
-}
-
-/* Navigation Buttons */
 div.buttons {
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
   padding-bottom: 20px;
+
+  button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: rgb(128, 205, 128);
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  button:hover {
+    background-color: rgb(73, 143, 73);
+  }
 }
 
-/* Button Styles */
-div.buttons button {
-  display: inline-block;
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: rgb(128, 205, 128);
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-div.buttons button:hover {
-  background-color: rgb(128, 205, 128);
-}
-
-/* Character Details */
 .char .char-content {
   position: relative;
-}
 
-.char .char-content img {
-  display: block;
-  max-width: 300px;
-  height: auto;
-  padding-block-end: 4px;
-}
+  img {
+    display: block;
+    max-width: 300px;
+    height: auto;
+    padding-block-end: 4px;
+  }
 
-.char .char-content .hidden-info {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(175, 226, 175, 0.5);
-  padding: 10px;
-  text-align: left;
-  box-sizing: border-box;
+  .hidden-info {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(175, 226, 175, 0.5);
+
+    padding: 10px;
+    text-align: left;
+    box-sizing: border-box;
+    border-radius: 5%;
+  }
 }
 
 .char .char-content:hover .hidden-info {
   display: block;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 300px;
 }
 
 #input {
@@ -117,8 +122,3 @@ input {
   width: 50%;
   text-align: center;
 }
-
-// input::placeholder {
-//   color: #666;
-//   /* Adjust the placeholder text color */
-// }
